I. HATE. JAVA 8.